# DiscordVoiceComm

./: .gitignore  CLAUDE.md  LICENSE  README.md  latest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
decisions/: 002-performance-roadmap.md
memo/: profile.md
src/: App.tsx  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/benches/: voice_conversion.rs
src-tauri/src/: lib.rs  main.rs  vc.rs
src-tauri/src/vc/: config.rs  dis_pub.rs  dis_sub.rs  metrics.rs  mod.rs  sub.rs  types.rs  vc.rs  vc_client.rs  voice_manager.rs  voice_profiler.rs
src-tauri/~/.tauri/: dvc.key  dvc.key.pub
