[package]
name = "discordvoicecommv1"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "discordvoicecommv1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12.4", features = ["client", "voice", "gateway", "standard_framework"] }
songbird = { version = "0.5.0", features = ["driver", "receive", "gateway"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
symphonia = { version = "0.5.4", features = ["pcm"] }
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
confy = "0.6.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
